<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
        android:id="@+id/actual_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="Actual Location Providers" />


    <ToggleButton
        android:id="@+id/network_toggle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dip"
        android:layout_marginTop="2dip"
        android:textOff="Not Listening To Network"
        android:textOn="Listening To Network" >
    </ToggleButton>


    <ToggleButton
        android:id="@+id/gps_toggle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textOff="Not Listening To GPS"
        android:layout_marginBottom="2dip"
        android:textOn="Listening for GPS" >
    </ToggleButton>

    <TextView
        android:id="@+id/network_title"
        android:layout_marginTop="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/network_provider_text" />

    <TextView
        android:id="@+id/network_latitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/network_latitude" />

    <TextView
        android:id="@+id/network_longitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/network_longitude" />

    <TextView
        android:id="@+id/gps_title"
        android:layout_marginTop="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/gps_provider_text" />
    <TextView
        android:id="@+id/gps_latitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/gps_latitude" />

    <TextView
        android:id="@+id/gps_longitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/gps_longitude" />

</LinearLayout>
</ScrollView>
